package com.bucketadapter.bucketadapterexceptions;

public class InvalidBucketPathException extends RuntimeException {
  public InvalidBucketPathException(String message) {
    super(message);
  }
}
